--- a/views/user/chat/group_chat.twig
+++ b/views/user/chat/group_chat.twig
@@ -92,7 +92,7 @@
                                                         </a>
                                                     {% else %}
                                                         <a href="/user/chat/{{ user.id }}" class="fs-5 fw-bolder text-gray-900 text-hover-primary mb-2">{{ user.fname|ucwords }} {{ user.lname|ucwords }}
-                                                        <small class="fw-bold text-muted">{{ user.email }}</small>
+                                                        <div class="fw-bold text-muted">{{ user.email }}</div>
                                                         </a>
                                                     {% endif %}
                                                 </div>
