--- a/views/user/chat/group_chat.twig
+++ b/views/user/chat/group_chat.twig
@@ -145,7 +145,7 @@
 
                                         <!--begin::All users-->
                                         {% if groupMembersCount != null %}
-                                            <a href="#" class="symbol symbol-35px symbol-circle" >
+                                            <a href="#" class="symbol symbol-35px symbol-circle"  data-bs-toggle="modal" data-bs-target="#kt_modal_view_users">
                                                 <span class="symbol-label fs-8 fw-bolder" data-bs-toggle="tooltip" data-bs-trigger="hover" title="View more users">+{{ groupMembersCount }}</span>
                                             </a>
                                         {% endif %}
