--- a/views/admin/plans/add_plan.twig
+++ b/views/admin/plans/add_plan.twig
@@ -6,6 +6,50 @@
     .tagify__input{
         padding:0px !important;
     }
+    .radioButton {
+        float: left;
+        margin: 0 5px 0 0;
+        width: 100%;
+        height: 100px;
+        position: relative;
+    }
+
+    .radioButton label,
+    .radioButton input {
+        display: block;
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+    }
+
+    .radioButton input[type="checkbox"] {
+        opacity: 0.011; /* Keep this to hide the radio button */
+        z-index: 100;
+    }
+
+    .radioButton input[type="checkbox"]:checked + label > button {
+        background: #ED141F; /* Change the background color when checked */
+        color: white; /* Change text color to white */
+        border-color: #ED141F;
+    }
+
+    .radioButton label {
+        cursor: pointer;
+        z-index: 90;
+        line-height: 70px; /* Adjust line height to center text vertically */
+    }
+
+    .radioButton label > button {
+        width: 100%; /* Make the button fill the label */
+        height: 100%;
+        border-radius: 4px;
+        background-color: transparent; /* Initial background for unselected button */
+        border: 1px solid #000; /* Border for the unselected button */
+        color: #000; /* Text color for unselected button */
+        font-size: 16px; /* Adjust font size as needed */
+    }
 </style>
     <div class="content d-flex flex-column flex-column-fluid" id="kt_content">
     <!--begin::Toolbar-->
@@ -73,19 +117,22 @@
                                                         <label class="form-label" for="tags">Tags:</label>
                                                         <input name='basic' id="tags" value='' class="form-control form-control-solid">
                                                     </div>
-                                                    <div class="col-lg-12 mt-2 mb-2">
-                                                        <button class="btn btn-success" type="button" onclick="addKey_points();" style="float: right; background: #28a745 !important; border-color: #28a745 !important;">ADD <span class="glyphicon glyphicon-plus" aria-hidden="true"></span></button>
-                                                    </div>
-                                                    <div class="col-sm-12 mb-2">
-                                                        <label class="form-label">Key Points</label>
-                                                        <input type="text" class="form-control form-control-solid" id="key_points" name="key_points[]" placeholder="Add Key Point">
-                                                    </div>
+{#                                                    <div class="col-lg-12 mt-2 mb-2">#}
+{#                                                        <button class="btn btn-success" type="button" onclick="addKey_points();" style="float: right; background: #28a745 !important; border-color: #28a745 !important;">ADD <span class="glyphicon glyphicon-plus" aria-hidden="true"></span></button>#}
+{#                                                    </div>#}
+{#                                                    <div class="col-sm-12 mb-2">#}
+{#                                                        <label class="form-label">Key Points</label>#}
+{#                                                        <input type="text" class="form-control form-control-solid" id="key_points" name="key_points[]" placeholder="Add Key Point">#}
+{#                                                    </div>#}
 
-                                                    <div class="col-sm-12 mb-2">
-                                                    <div id="addKey_points">
+{#                                                    <div class="col-sm-12 mb-2">#}
+{#                                                    <div id="addKey_points">#}
 
-                                                    </div>
-                                                    </div>
+{#                                                    </div>#}
+{#                                                    </div>#}
+
+
+
                                                     <div class="col-sm-12 mb-2">
                                                         <label class="form-label">Discount (%)</label>
                                                         <input type="number" class="form-control form-control-solid" id="percentage" min="0" name="percentage" placeholder="Discount (%)" value="0">
@@ -97,6 +144,20 @@
                                                     <div class="col-sm-6 mb-2">
                                                         <label class="form-label">Yearly Price</label>
                                                         <input type="number" class="form-control form-control-solid" id="yearly_price" min="0" name="yearly_price" placeholder="Yearly Price">
+                                                    </div>
+                                                    <div class="col-sm-12 mb-2">
+                                                        <div class="row">
+                                                            {% for permission in permissions %}
+                                                                <div class="col-xl-3 col-md-4 mt-2">
+                                                                    <div class="radioButton" style="margin-right: 10px">
+                                                                        <input class=" m4 required-input" type="checkbox" name="key_points[]" id="{{ permission.id }}"
+                                                                               value="{{ permission.id }}">
+                                                                        <label  for="{{ permission.id }}"><button type="button" class="btn btn-light-primary">{{ permission.title }}</button></label>
+                                                                    </div>
+                                                                </div>
+                                                            {% endfor %}
+                                                        </div>
+
                                                     </div>
                                                 </div>
                                             </div>
@@ -159,25 +220,25 @@
         }
 
     </script>
-    <script>
+{#    <script>#}
 
 
-        var room = 1;
-        function addKey_points() {
-            room++;
-            var objTo = document.getElementById('addKey_points')
-            var divtest = document.createElement("div");
-            divtest.setAttribute("class", "form-group row removeclass"+room);
-            var rdiv = 'removeclass'+room;
+{#        var room = 1;#}
+{#        function addKey_points() {#}
+{#            room++;#}
+{#            var objTo = document.getElementById('addKey_points')#}
+{#            var divtest = document.createElement("div");#}
+{#            divtest.setAttribute("class", "form-group row removeclass"+room);#}
+{#            var rdiv = 'removeclass'+room;#}
 
-            divtest.innerHTML = ' <div class="col-sm-10 mt-2"><input type="text" class="form-control form-control-solid" id="key_points" name="key_points[]" placeholder="Add Key Point"></div><div class="col-sm-2 "><button class="btn btn-danger mt-3 mb-2" type="button" onclick="remove_Key_points('+ room +');" style="float: right; background: #dc3545 !important; border-color: #dc3545 !important;">DELETE <span class="glyphicon glyphicon-minus" aria-hidden="true"></span></button></div>';
-            objTo.appendChild(divtest)
-        }
-        // children remove fields
-        function remove_Key_points(rid) {
-            $('.removeclass'+rid).remove();
-        }
+{#            divtest.innerHTML = ' <div class="col-sm-10 mt-2"><input type="text" class="form-control form-control-solid" id="key_points" name="key_points[]" placeholder="Add Key Point"></div><div class="col-sm-2 "><button class="btn btn-danger mt-3 mb-2" type="button" onclick="remove_Key_points('+ room +');" style="float: right; background: #dc3545 !important; border-color: #dc3545 !important;">DELETE <span class="glyphicon glyphicon-minus" aria-hidden="true"></span></button></div>';#}
+{#            objTo.appendChild(divtest)#}
+{#        }#}
+{#        // children remove fields#}
+{#        function remove_Key_points(rid) {#}
+{#            $('.removeclass'+rid).remove();#}
+{#        }#}
 
 
-    </script>
+{#    </script>#}
 {% endblock %}
