--- a/views/user/document_hub/firm_index_details.twig
+++ b/views/user/document_hub/firm_index_details.twig
@@ -1,62 +1,105 @@
 {% extends 'user/master.twig' %}
 {% block content %}
+    <style>
+        .filepond--credits{
+            display: none !important;
+        }
+    </style>
     <link rel="stylesheet" href="https://unpkg.com/filepond/dist/filepond.css">
     <link rel="stylesheet" href="https://unpkg.com/filepond-plugin-image-preview/dist/filepond-plugin-image-preview.css">
     <div class="content d-flex flex-column flex-column-fluid" id="kt_content">
-    <div class="toolbar" id="kt_toolbar">
-        <div id="kt_toolbar_container" class="container-fluid d-flex flex-stack">
-            <div data-kt-swapper="true" data-kt-swapper-mode="prepend" data-kt-swapper-parent="{default: '#kt_content_container', 'lg': '#kt_toolbar_container'}" class="page-title d-flex align-items-center flex-wrap me-3 mb-5 mb-lg-0">
-                <h1 class="d-flex text-dark fw-bolder fs-3 align-items-center my-1">Document Hub</h1>
+        <div class="toolbar" id="kt_toolbar">
+            <!--begin::Container-->
+            <div id="kt_toolbar_container" class="container-fluid d-flex flex-stack">
+                <!--begin::Page title-->
+                <div data-kt-swapper="true" data-kt-swapper-mode="prepend" data-kt-swapper-parent="{default: '#kt_content_container', 'lg': '#kt_toolbar_container'}" class="page-title d-flex align-items-center flex-wrap me-3 mb-5 mb-lg-0">
+                    <!--begin::Title-->
+                    <h1 class="d-flex text-dark fw-bolder fs-3 align-items-center my-1">View Document  </h1>
+                    <!--end::Title-->
+                    <!--begin::Separator-->
+                    <span class="h-20px border-gray-300 border-start mx-4"></span>
+                    <!--end::Separator-->
+                    <!--begin::Breadcrumb-->
+                    <ul class="breadcrumb breadcrumb-separatorless fw-bold fs-7 my-1">
+                        <!--begin::Item-->
+                        <li class="breadcrumb-item text-muted">Document Hub</li>
+                        <!--end::Item-->
+                        <!--begin::Item-->
+                        <li class="breadcrumb-item">
+                            <span class="bullet bg-gray-300 w-5px h-2px"></span>
+                        </li>
+                        <!--end::Item-->
+                        <!--begin::Item-->
+                        <li class="breadcrumb-item text-dark">View Document</li>
+                        <!--end::Item-->
+                    </ul>
+                    <!--end::Breadcrumb-->
+                </div>
+                <!--end::Page title-->
             </div>
+            <!--end::Container-->
         </div>
-    </div>
-        <style>
-            table.dataTable{
-                margin-top: 1px !important;
-            }
-        </style>
 
-    <div class="post d-flex flex-column-fluid" id="kt_post">
-        <div id="kt_content_container" class="container-fluid">
-            <div class="card">
-                <div class="card-body">
-                    <div class="d-flex flex-column flex-xl-row p-7">
-                        <div class="flex-lg-row-fluid me-xl-15 mb-20 mb-xl-0">
-                            <div class="mb-0">
-                                <form method="post" action="#" class="form mb-15">
-                                    <div class="position-relative">
-                                        <!--begin::Svg Icon | path: icons/duotune/general/gen021.svg-->
-                                        <span class="svg-icon svg-icon-1 svg-icon-primary position-absolute top-50 translate-middle ms-9">
-																<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
-																	<rect opacity="0.5" x="17.0365" y="15.1223" width="8.15546" height="2" rx="1" transform="rotate(45 17.0365 15.1223)" fill="currentColor" />
-																	<path d="M11 19C6.55556 19 3 15.4444 3 11C3 6.55556 6.55556 3 11 3C15.4444 3 19 6.55556 19 11C19 15.4444 15.4444 19 11 19ZM11 5C7.53333 5 5 7.53333 5 11C5 14.4667 7.53333 17 11 17C14.4667 17 17 14.4667 17 11C17 7.53333 14.4667 5 11 5Z" fill="currentColor" />
-																</svg>
-															</span>
-                                        <!--end::Svg Icon-->
-                                        <input type="text" class="form-control form-control-lg form-control-solid ps-14" name="search" id="search" placeholder="Search" />
+
+        <div class="post d-flex flex-column-fluid" id="kt_post">
+            <div id="kt_content_container" class="container-fluid">
+                <div class="card">
+                    <div class="card-body">
+                        <div class="d-flex flex-column flex-xl-row p-7">
+                            <div class="flex-lg-row-fluid me-xl-15 mb-20 mb-xl-0">
+                                <div class="mb-0">
+                                    <!--begin::Heading-->
+                                    <div class="d-flex align-items-center mb-12">
+                                        {% if documentHub[0].status == 'yes' %}
+                                            <span class="svg-icon svg-icon-4qx ms-n2 me-3 svg-icon-success">
+															<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+																<path opacity="0.3" d="M19 22H5C4.4 22 4 21.6 4 21V3C4 2.4 4.4 2 5 2H14L20 8V21C20 21.6 19.6 22 19 22ZM11.7 17.7L16 14C16.4 13.6 16.4 12.9 16 12.5C15.6 12.1 15.4 12.6 15 13L11 16L9 15C8.6 14.6 8.4 14.1 8 14.5C7.6 14.9 8.1 15.6 8.5 16L10.3 17.7C10.5 17.9 10.8 18 11 18C11.2 18 11.5 17.9 11.7 17.7Z" fill="currentColor"></path>
+																<path d="M10.4343 15.4343L9.25 14.25C8.83579 13.8358 8.16421 13.8358 7.75 14.25C7.33579 14.6642 7.33579 15.3358 7.75 15.75L10.2929 18.2929C10.6834 18.6834 11.3166 18.6834 11.7071 18.2929L16.25 13.75C16.6642 13.3358 16.6642 12.6642 16.25 12.25C15.8358 11.8358 15.1642 11.8358 14.75 12.25L11.5657 15.4343C11.2533 15.7467 10.7467 15.7467 10.4343 15.4343Z" fill="currentColor"></path>
+																<path d="M15 8H20L14 2V7C14 7.6 14.4 8 15 8Z" fill="currentColor"></path>
+															</svg>
+														</span>
+                                        {% else %}
+                                            <span class="svg-icon svg-icon-4qx ms-n2 me-3 svg-icon-danger">
+                                                                   <svg  xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+																	<path opacity="0.3" d="M19 22H5C4.4 22 4 21.6 4 21V3C4 2.4 4.4 2 5 2H14L20 8V21C20 21.6 19.6 22 19 22ZM16 13.5L12.5 13V10C12.5 9.4 12.6 9.5 12 9.5C11.4 9.5 11.5 9.4 11.5 10L11 13L8 13.5C7.4 13.5 7 13.4 7 14C7 14.6 7.4 14.5 8 14.5H11V18C11 18.6 11.4 19 12 19C12.6 19 12.5 18.6 12.5 18V14.5L16 14C16.6 14 17 14.6 17 14C17 13.4 16.6 13.5 16 13.5Z" fill="currentColor"></path>
+																	<rect x="11" y="19" width="10" height="2" rx="1" transform="rotate(-90 11 19)" fill="currentColor"></rect>
+																	<rect x="7" y="13" width="10" height="2" rx="1" fill="currentColor"></rect>
+																	<path d="M15 8H20L14 2V7C14 7.6 14.4 8 15 8Z" fill="currentColor"></path>
+																</svg></span>
+                                        {% endif %}
+                                        <div class="d-flex flex-column">
+                                            <h1 class="text-gray-800 fw-bold"><span style="color: #ED141F;">{{ client_details[0].fname}} {{ client_details[0].lname }}</span> {% if documentHub[0].status == 'yes' %} Uploaded the document.{% else %}Not Uploaded the document Yet.{% endif %}</h1>
+                                        </div>
                                     </div>
-                                </form>
-{#                                <h1 class="text-dark mb-10">Document Hub</h1>#}
-                                <div class="table-responsive">
-                                    <table id="table"  class="table dt-table-hover" style="width:100%">
-                                        <thead>
-                                        <tr>
-                                            <th></th>
-                                        </tr>
-                                        </thead>
-                                        <tbody>
-                                        </tbody>
-                                    </table>
+                                    <div class="mb-15">
+                                        <!--begin::Description-->
+                                        <div class="mb-15 fs-5 fw-normal text-gray-800">
+
+                                            <div class="mb-10">{{ documentHub[0].client_des }}</div>
+                                            <!--end::Text-->
+                                            <!--begin::Code-->
+                                            <div class="row">
+                                                {% if documentHub[0].file != "" and documentHub[0].file != null %}
+                                                    <div class="col-lg-12 text-center">
+                                                        <a href="{{ env.APP_URL }}{{ documentHub[0].file }}" download="{{ env.APP_URL }}{{ documentHub[0].file }}"  class="btn btn-primary ">
+                                                            <!--begin::Svg Icon | path: icons/duotune/communication/com005.svg-->
+                                                            <span class="svg-icon svg-icon-2">
+													<i class="fa-solid fa-download"></i>
+												</span>
+                                                            Download File</a>
+                                                    </div>
+                                                {% endif %}
+                                            </div>
+                                        </div>
+                                    </div>
 
                                 </div>
-
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
     </div>
 
 
@@ -270,57 +313,29 @@
         </div>
         <!--end::Modal dialog-->
     </div>
+    <div class="modal fade" id="commentModal" tabindex="-1" role="dialog" aria-labelledby="commentModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="commentModalLabel">Full Description</h5>
+                    <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <p id="fullComment"></p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                </div>
+            </div>
+              </div>
+    </div>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/filepond/dist/filepond.js"></script>
     <script src="https://unpkg.com/filepond-plugin-file-validate-size/dist/filepond-plugin-file-validate-size.js"></script>
     <script src="https://unpkg.com/filepond-plugin-file-validate-type/dist/filepond-plugin-file-validate-type.js"></script>
     <script src="https://unpkg.com/filepond-plugin-image-preview/dist/filepond-plugin-image-preview.js"></script>
     <script>
-        $(document).ready(function () {
-            var csrf_token = $("input[name=csrf]").val();
-            var table = $('#table').dataTable({
-                "language": {
-                    processing: '<i class="fa fa-spinner fa-spin fa-3x fa-fw"></i><span class="sr-only">Loading...</span> '
-                },
-                "responsive": true,
-                "bProcessing": true,
-                "sAjaxSource": "/user/api?page_name=view_document_hub_client&csrf="+csrf_token,
-                "bPaginate": true,
-                "sPaginationType": "full_numbers",
-                "iDisplayLength": 10,
-                "aoColumns": [
-                    {mData: 'viewDocs'},
-
-                ]
-            });
-            $('#search').on('keyup', function() {
-                $('#table').DataTable().search(this.value).draw();
-            });
-        });
-        function userStatus(userID) {
-                var currStatus= "1";
-            var el = this;
-            $(this).html('<i class="fa fa-circle-o-notch fa-spin"></i> loading...');
-            var csrf_token = $("input[name=csrf]").val();
-            $.ajax({
-                url: '/user/api',
-                type: 'GET', data: {
-                    id: userID,
-                    status: currStatus,
-                    page_name: "DocStatusUpdate",
-                    table_name:"document_hub",
-                    status_table:"see_doc",
-                    csrf: csrf_token
-                }, success: function (data) {
-                    if (data['statusCode'] == "1") {
-                        window.location.href = '/client/dochubdetails/'+data['id'];
-                    } else {
-                        toastr.error('Something went wrong.');
-
-                    }
-                }
-
-            });
-        }
     </script>
 {% endblock %}
