--- a/views/user/document_hub/firm_index_details.twig
+++ b/views/user/document_hub/firm_index_details.twig
@@ -48,6 +48,24 @@
                         <div class="d-flex flex-column flex-xl-row p-7">
                             <div class="flex-lg-row-fluid me-xl-15 mb-20 mb-xl-0">
                                 <div class="mb-0">
+                                    <div class="mb-15 fs-5 fw-normal text-gray-800">
+
+                                        <div class="mb-10">{{ documentHub[0].firm_des }}</div>
+                                        <!--end::Text-->
+                                        <!--begin::Code-->
+                                        <div class="row">
+                                            {% if documentHub[0].document_id != "" and documentHub[0].document_id != null %}
+                                                <div class="col-lg-12 text-center">
+                                                    <a role="button" onclick="download_files('{{ documentHub[0].document_id }}')"  class="btn btn-primary ">
+                                                        <!--begin::Svg Icon | path: icons/duotune/communication/com005.svg-->
+                                                        <span class="svg-icon svg-icon-2">
+													<i class="fa-solid fa-download"></i>
+												</span>
+                                                        Download File</a>
+                                                </div>
+                                            {% endif %}
+                                        </div>
+                                    </div>
                                     <!--begin::Heading-->
                                     <div class="d-flex align-items-center mb-12">
                                         {% if documentHub[0].status == 'yes' %}
