resolved document hub issues

--- a/views/admin/includes/footer.twig
+++ b/views/admin/includes/footer.twig
@@ -3,7 +3,7 @@
     <div class="container-fluid d-flex flex-column flex-md-row align-items-center justify-content-between">
         <!--begin::Copyright-->
         <div class="text-dark order-2 order-md-1">
-            Copyright © <span class="dynamic-year">2024</span> <a target="_blank" href="https://zotecsoft.com/">ZotecSoft</a>, All rights reserved.
+            Copyright © <span class="dynamic-year">2024</span> Techneke Tax Technology, All rights reserved.
         </div>
         <!--end::Copyright-->
         <!--begin::Menu-->
@@ -14,23 +14,7 @@
                 <select id="languageSelect" class=" form-select form-select-solid" >
                     <option value="en" class="">English</option>
                     <option value="es" class="">Spanish</option>
-                    <option value="ja" class="">Japanese</option>
-                    <option value="zh-CN" class="">Chinese</option>
-                    <option value="pt" class="">Portuguese</option>
-                    <option value="ar" class="">Arabic</option>
-                    <option value="nl" class="">Dutch</option>
-                    <option value="de" class="">German</option>
-                    <option value="fr" class="">French</option>
-                    <option value="it" class="">Italian</option>
-                    <option value="pl" class="">Polish</option>
-                    <option value="ru" class="">Russian</option>
-                    <option value="sw" class="">Swahili</option>
-                    <option value="ur" class="">Urdu</option>
-                    <option value="hi" class="">Hindi</option>
-                    <option value="bn" class="">Bengali</option>
-                    <option value="fa" class="">Persian</option>
-                    <option value="ta" class="">Tamil</option>
-                    <option value="ml" class="">Malayalam</option>
+
                 </select>
             </li>
 
