--- a/views/user/includes/footer.twig
+++ b/views/user/includes/footer.twig
@@ -3,7 +3,7 @@
     <div class="container-fluid d-flex flex-column flex-md-row align-items-center justify-content-between">
         <!--begin::Copyright-->
         <div class="text-dark order-2 order-md-1">
-            Copyright © <span class="dynamic-year">2024</span> Techneketax, All rights reserved.
+            Copyright © <span class="dynamic-year">2024</span> Techneke Tax Technology, All rights reserved.
         </div>
         <!--end::Copyright-->
         <!--begin::Menu-->
