--- a/views/user/document_hub/firm_index_details.twig
+++ b/views/user/document_hub/firm_index_details.twig
@@ -377,5 +377,42 @@
     <script src="https://unpkg.com/filepond-plugin-file-validate-type/dist/filepond-plugin-file-validate-type.js"></script>
     <script src="https://unpkg.com/filepond-plugin-image-preview/dist/filepond-plugin-image-preview.js"></script>
     <script>
+        function download_files(document_id) {
+            var csrf_token = $("input[name=csrf]").val();
+            $.ajax({
+                url: '/client/download/document',
+                type: 'POST',
+                data: {
+                    document_id: document_id,
+                    csrf: csrf_token
+                },
+                xhrFields: {
+                    responseType: 'blob'
+                },
+                success: function (data) {
+                    var blob = new Blob([data], { type: 'application/zip' });
+                    var link = document.createElement('a');
+                    link.href = window.URL.createObjectURL(blob);
+
+                    // Generate a random number and append it to the file name
+                    var randomNum = Math.floor(Math.random() * 1000000); // Adjust the range if needed
+                    link.download =  randomNum + '.zip';
+
+                    link.click();
+                    toastr.success('Successfully downloaded.');
+                },
+                error: function () {
+                    toastr.error('Something went wrong.');
+                }
+            });
+        }
+        $(document).ready(function(){
+            $(document).on('click', '.see-more', function(e){
+                e.preventDefault();
+                var fullComment = $(this).data('description');
+                $('#fullComment').text(fullComment);
+                $('#commentModal').modal('show');
+            });
+        });
     </script>
 {% endblock %}
